language/move-prover/tests/sources/functional/references.exp
Move prover returns: exiting with boogie verification errors
error:  A postcondition might not hold on this return path.

    ┌── tests/sources/functional/references.move:66:9 ───
    │
 66 │         aborts_if true;
    │         ^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/references.move:58:5: mut_ref_incorrect (entry)
    =     at tests/sources/functional/references.move:59:13: mut_ref_incorrect
    =     at tests/sources/functional/references.move:60:31: mut_ref_incorrect
    =         b = <redacted>,
    =         b_ref = <redacted>
    =     at tests/sources/functional/references.move:43:5: mut_b (entry)
    =     at tests/sources/functional/references.move:44:9: mut_b
    =         b = <redacted>,
    =         b = <redacted>,
    =         $t1 = <redacted>
    =     at tests/sources/functional/references.move:43:9: mut_b
    =     at tests/sources/functional/references.move:62:14: mut_ref_incorrect
    =         b = <redacted>
    =     at tests/sources/functional/references.move:63:13: mut_ref_incorrect
    =     at tests/sources/functional/references.move:58:5: mut_ref_incorrect (exit)
